// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`>>> features/form/components/Legend.tsx +++ should not render optional because labelSettings.optionalIndicator is false 1`] = `
Array [
  <label
    className="a-form-label title-label"
    htmlFor="legend1"
  >
    legend.text
    
  </label>,
  <span
    className="a-form-label description-label"
    id="description-legend1"
  >
    legend.description
  </span>,
]
`;

exports[`>>> features/form/components/Legend.tsx +++ should not render optional because required 1`] = `
Array [
  <label
    className="a-form-label title-label"
    htmlFor="legend1"
  >
    legend.text
    
  </label>,
  <span
    className="a-form-label description-label"
    id="description-legend1"
  >
    legend.description
  </span>,
]
`;

exports[`>>> features/form/components/Legend.tsx +++ should not render optional because required is true even when labelSettings.optionalIndicator is true 1`] = `
Array [
  <label
    className="a-form-label title-label"
    htmlFor="legend1"
  >
    legend.text
    
  </label>,
  <span
    className="a-form-label description-label"
    id="description-legend1"
  >
    legend.description
  </span>,
]
`;

exports[`>>> features/form/components/Legend.tsx +++ should render optional 1`] = `
Array [
  <label
    className="a-form-label title-label"
    htmlFor="legend1"
  >
    legend.text
    <span
      className="label-optional"
    >
       (general.optional)
    </span>
    
  </label>,
  <span
    className="a-form-label description-label"
    id="description-legend1"
  >
    legend.description
  </span>,
]
`;
